--- a/Gank/Views/home/HomeTableViewCell.xib
+++ b/Gank/Views/home/HomeTableViewCell.xib
@@ -1,52 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Baseline standard spacing" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HomeTableViewCell" customModule="Gank" customModuleProvider="target"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="87" id="KGk-i7-Jjw" customClass="HomeTableViewCell" customModule="Gank" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="332" height="100"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="139" id="KGk-i7-Jjw" customClass="HomeTableViewCell" customModule="Gank" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="332" height="152"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="332" height="99"/>
+                <rect key="frame" x="0.0" y="0.0" width="332" height="151.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Desc" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pT7-Ha-nEh">
-                        <rect key="frame" x="8" y="8" width="316" height="22"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="729" text="Desc" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="pT7-Ha-nEh">
+                        <rect key="frame" x="15" y="74" width="302" height="34.5"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="09u-Zb-QDy">
-                        <rect key="frame" x="286" y="70" width="38" height="21"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HUu-xd-0dD">
+                        <rect key="frame" x="0.0" y="116.5" width="332" height="35"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="09u-Zb-QDy">
+                                <rect key="frame" x="283" y="9" width="34" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="YK2-J6-y0U">
+                                <rect key="frame" x="15" y="9" width="46.5" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" red="0.98039215686274506" green="0.98039215686274506" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="YK2-J6-y0U" firstAttribute="leading" secondItem="HUu-xd-0dD" secondAttribute="leading" constant="15" id="EkR-8P-7f8"/>
+                            <constraint firstAttribute="trailing" secondItem="09u-Zb-QDy" secondAttribute="trailing" constant="15" id="Vez-pA-MYN"/>
+                            <constraint firstItem="09u-Zb-QDy" firstAttribute="centerY" secondItem="HUu-xd-0dD" secondAttribute="centerY" id="aE6-St-SJO"/>
+                            <constraint firstAttribute="height" constant="35" id="jln-kT-LXY"/>
+                            <constraint firstItem="YK2-J6-y0U" firstAttribute="centerY" secondItem="HUu-xd-0dD" secondAttribute="centerY" id="yff-oB-nbB"/>
+                        </constraints>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="254" verticalCompressionResistancePriority="763" text="님들아 조언좀" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="aAI-ZH-US2">
+                        <rect key="frame" x="15" y="15" width="302" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Author" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YK2-J6-y0U">
-                        <rect key="frame" x="226" y="70" width="52" height="21"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="253" verticalCompressionResistancePriority="760" text="익명 ∙ 2월 24일 오후 8:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="Jfs-y9-c9F">
+                        <rect key="frame" x="15" y="43" width="302" height="16"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="pT7-Ha-nEh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" id="3bp-Gs-5z0"/>
-                    <constraint firstItem="pT7-Ha-nEh" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="IBn-vY-OF3"/>
-                    <constraint firstItem="pT7-Ha-nEh" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="NQo-AA-UEg"/>
-                    <constraint firstItem="09u-Zb-QDy" firstAttribute="leading" secondItem="YK2-J6-y0U" secondAttribute="trailing" constant="8" id="ST2-Gs-bZt"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="09u-Zb-QDy" secondAttribute="bottom" constant="0.5" id="crG-45-wL2"/>
-                    <constraint firstAttribute="bottomMargin" secondItem="YK2-J6-y0U" secondAttribute="bottom" constant="0.5" id="g1i-L6-dKT"/>
-                    <constraint firstItem="YK2-J6-y0U" firstAttribute="top" relation="greaterThanOrEqual" secondItem="pT7-Ha-nEh" secondAttribute="bottom" constant="5" id="pes-Di-tyH"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="09u-Zb-QDy" secondAttribute="trailing" id="uTq-F8-79I"/>
+                    <constraint firstAttribute="trailing" secondItem="pT7-Ha-nEh" secondAttribute="trailing" constant="15" id="6OF-rB-CUW"/>
+                    <constraint firstItem="aAI-ZH-US2" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="7GS-jY-wUb"/>
+                    <constraint firstItem="pT7-Ha-nEh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="EJ1-Ha-3ak"/>
+                    <constraint firstAttribute="trailing" secondItem="Jfs-y9-c9F" secondAttribute="trailing" constant="15" id="JtQ-k0-Fk6"/>
+                    <constraint firstItem="pT7-Ha-nEh" firstAttribute="top" secondItem="Jfs-y9-c9F" secondAttribute="bottom" constant="15" id="WWC-gG-g6w"/>
+                    <constraint firstAttribute="bottom" secondItem="HUu-xd-0dD" secondAttribute="bottom" id="XEZ-ss-AjR"/>
+                    <constraint firstItem="aAI-ZH-US2" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="Zzs-j4-DzP"/>
+                    <constraint firstItem="Jfs-y9-c9F" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="cyN-Mi-701"/>
+                    <constraint firstItem="Jfs-y9-c9F" firstAttribute="top" secondItem="aAI-ZH-US2" secondAttribute="bottom" constant="7" id="kfa-49-1Zi"/>
+                    <constraint firstAttribute="trailing" secondItem="HUu-xd-0dD" secondAttribute="trailing" id="mWG-1K-CVq"/>
+                    <constraint firstAttribute="trailing" secondItem="aAI-ZH-US2" secondAttribute="trailing" constant="15" id="nbl-iF-xs1"/>
+                    <constraint firstItem="HUu-xd-0dD" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="s4s-YX-0QW"/>
+                    <constraint firstItem="HUu-xd-0dD" firstAttribute="firstBaseline" secondItem="pT7-Ha-nEh" secondAttribute="baseline" constant="13" symbolType="layoutAnchor" id="ywQ-az-JMX"/>
                 </constraints>
             </tableViewCellContentView>
             <inset key="separatorInset" minX="10" minY="0.0" maxX="10" maxY="0.0"/>
@@ -55,7 +86,7 @@
                 <outlet property="gankTime" destination="09u-Zb-QDy" id="I5o-pf-bqI"/>
                 <outlet property="gankTitle" destination="pT7-Ha-nEh" id="lLn-8n-hsC"/>
             </connections>
-            <point key="canvasLocation" x="31" y="73"/>
+            <point key="canvasLocation" x="31" y="99"/>
         </tableViewCell>
     </objects>
 </document>
